--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     overflow: hidden;
 }
 
-.Сайт ¯⁠\⁠_⁠(⁠ツ⁠)⁠_⁠/⁠¯ {
+.melting-text {
     font-size: 6rem;
     font-weight: bold;
     text-transform: uppercase;
